# wolf-agent

./: .gitignore  .gitkeep  README.md  config.example.yaml  pyproject.toml
docs/: ARCHITECTURE.md
wolf/: __init__.py  agent.py  cli.py  conversation_loop.py
wolf/agents/: __init__.py  executor.py  loader.py
wolf/config/: prompt_builder.py  settings.py
wolf/context/: __init__.py  compressor.py
wolf/hooks/: __init__.py  manager.py
wolf/mcp/: client.py
wolf/memory/: store.py
wolf/permissions/: __init__.py
wolf/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
wolf/sessions/: __init__.py
wolf/skills/: evolve.py  loader.py  score.py  trigger.py
wolf/tools/: diagnostics_tool.py  execute_code_tool.py  file_tools.py  git_tools.py  memory_tool.py  notebook_tool.py  patch_tool.py  refactor_tool.py  registry.py  skill_tool.py  terminal_tool.py  test_runner_tool.py  todo_tool.py  web_tools.py
wolf/ui/: prompts.py  renderer.py  spinner.py
